2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (find_and_go_to_working_copy, save_initial_path) 
	(go_to_working_copy): Use new checked structure.
	(operator <<): Make sure we can log our access_tracked values
	without marking them as used.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (struct access_tracker): Add invariant checking on
	lifetime usage of path roots.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.hh (any_path::operator =): return *this.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.{cc,hh}: More fixes.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.{cc,hh}: Reorganize a bit.  Implement file_path and
	bookkeeping_path.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (file_path): Implement basic constructor.
	Misc compile fixes.
	Add single-character names to tests.
	
2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (go_to_working_copy): New function.  Implement.
	* app_state.cc (create_working_copy): Adjust accordingly.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (find_and_go_to_working_copy): Implement.
	* app_state.cc (allow_working_copy): Adjust accordingly.
	(relative_directory): Remove.
	* file_io.cc (find_working_copy): Remove.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (save_initial_path): Update for previous changes.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (test_system_path): Add tests for the
	from-any_path constructor.  Add test for "~foo" handling.
	Start cleaning up path roots.
	* platform.hh: Note that get_current_working_dir() is
	charset-broken (i.e., operations started inside non-utf8
	directories are probably broken).

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* app_state.cc (allow_working_copy): 
	* change_set.cc (print_insane_change_set): Two more small compile
	fixes.
	All remaining compile errors are localized to unimplemented
	paths.cc/file_io.cc functionality.
