@@ -1,3 +1,11 @@
+2005-08-25  Nathaniel Smith  <njs@pobox.com>
+
+	* paths.cc (system_path): Implement.
+
+2005-08-24  Nathaniel Smith  <njs@pobox.com>
+
+	* paths.cc (fully_normalized_path): Use find_first_of.
+
 2005-08-24  Nathaniel Smith  <njs@pobox.com>
 
 	* paths.cc (find_and_go_to_working_copy, save_initial_path) 
